<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".InfoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info_messages"
        android:text="@string/xml_textview"
        android:background="@color/colorBG2"
        android:lines="3" />

    <LinearLayout
        android:id="@+id/info_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBG1"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/info_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/xml_icon"
            android:padding="2dp"
            android:src="@drawable/p01" />

        <TextView
            android:id="@+id/info_alias"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/xml_textview2"
            android:textStyle="bold"
            android:gravity="center" />

    </LinearLayout>

    <Button
        android:id="@+id/info_friend_tools"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textStyle="bold"
        android:background="@drawable/button_round"
        android:onClick="onClickFriendTools"
        android:text="@string/xml_btn1" />

    <TextView
        android:id="@+id/info_friend_set_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBG2"
        android:gravity="center"
        android:text="@string/xml_friend_list_title"
        android:textStyle="bold" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBG3"
        android:id="@+id/info_friend_set" />

</LinearLayout>