<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChannelActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/channel_messages"
        android:text="@string/xml_textview"
        android:background="@color/colorBG2"
        android:lines="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/channel_master_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/xml_icon"
            android:padding="2dp"
            android:src="@drawable/p01" />

        <TextView
            android:id="@+id/channel_master_alias"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/xml_textview2"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:gravity="center" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/prompt_chn_phone_call"
            app:srcCompat="@android:drawable/sym_action_call" />

        <TextView
            android:id="@+id/channel_owner_alias"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/xml_textview2"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="center" />

        <ImageView
            android:id="@+id/channel_owner_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/xml_icon"
            android:padding="2dp"
            android:src="@drawable/p02" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/channel_master_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_chn_master_chat"
            android:inputType="text"
            android:maxEms="12" />

        <ImageButton
            android:id="@+id/channel_master_chat_add"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:contentDescription="@string/action_friend_id"
            android:onClick="onClickMasterChat"
            app:srcCompat="@android:drawable/arrow_down_float" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <EditText
            android:id="@+id/channel_owner_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_chn_owner_chat"
            android:inputType="text"
            android:maxEms="12"
            android:maxLength="30" />

        <ImageButton
            android:id="@+id/channel_owner_chat_add"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/action_friend_id"
            android:onClick="onClickOwnerChat"
            android:layout_gravity="bottom"
            app:srcCompat="@android:drawable/arrow_down_float" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/channel_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>