<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".FriendsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/friends_messages"
        android:text="@string/xml_textview"
        android:background="@color/colorBG2"
        android:lines="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBG1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/friends_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_id"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/friends_add_by_id"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:background="@drawable/button_round"
            android:text="@string/xml_btn1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBG1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/friends_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/friends_search_by_e-mail"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:background="@drawable/button_round"
            android:text="@string/xml_btn1" />

    </LinearLayout>

    <ListView
        android:id="@+id/friends_search_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="@color/colorBG3" />

    <TextView
        android:id="@+id/friends_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBG2"
        android:gravity="center"
        android:text="@string/xml_textview"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/friends_set_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@color/colorBG3" />
</LinearLayout>